[package]
name = "nebula-vault"
version = "0.1.0"
edition = "2021"
description = "Solana native token vault PoC program"
authors = ["0xInq"]
license = "Apache-2.0"

[features]
no-entrypoint = []
test-bpf = []

[dependencies]
solana-program = "1.16"
thiserror = "1.0"
num-derive = "0.3"
num-traits = "0.2"
spl-token = { version = "3.5", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "1.1", features = ["no-entrypoint"] }
borsh = "0.10"

[dev-dependencies]
solana-program-test = "1.16"
solana-sdk = "1.16"

[lib]
crate-type = ["cdylib", "lib"]
